--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,51 @@
-<html>
+<!DOCTYPE html>
+
+<html lang=en>
 
 <head>
-  <title>Imgur Clone</title>
-  <link rel="stylesheet" href="/stylesheets/style.css">
+
+  <meta charset=“UTF-8”>
+
+  <meta name=“viewport” content=“width=device-width, initial-scale=1.0”>
+
+  <meta http-equiv=“X-UA-Compatible” content=“ie=edge”>
+
+  <title> Home </title>
+
+  <link rel="stylesheet" href="stylesheets/style.css">
+
 </head>
 
 <body>
-  <h1>CSC 317 Final Project</h1>
-  <p>Hello World!</p>
+
+<ul>
+  <li style="float:left"> <a href="search.html">Search</a> </li>
+  <li style="float:left"> <a href="postImage.html">Post</a> </li>
+  <li style="float:left"> <a class="active" href="index.html">Home</a> </li>
+  <li style="float:right"> <a href="login.html">Login</a> </li>
+  <li style="float:right"> <a href="registration.html">Register</a> </li>
+</ul>
+
+<h1>
+  <br>
+  <br>
+  Today's Images
+</h1>
+
+<div class="grid-container">
+  <div class="grid-item">1</div>
+  <div class="grid-item">2</div>
+  <div class="grid-item">3</div>
+  <div class="grid-item">4</div>
+  <div class="grid-item">5</div>
+  <div class="grid-item">6</div>
+  <div class="grid-item">7</div>
+  <div class="grid-item">8</div>
+  <div class="grid-item">9</div>
+</div>
+
+<p>To post an image: log in or sign up and select post from the navigation bar.</p>
+
 </body>
 
 </html>
